# capsule

./: .gitignore  Makefile  README.md  docker-compose.yml  prometheus.yml  pyproject.toml  requirements.txt
capsule/: __init__.py  canary.py  cli.py  deployer.py  detector.py  helm.py  k8s_client.py  manifest.py  models.py  onnx_optimizer.py  packager.py  registry.py  server_template.py
capsule_output/: Dockerfile
config/: defaults.yaml
dashboards/: capsule.json
docs/: demo.md
docs/internal/: DOCUMENTATION.md
examples/fraud_detector/: capsule.yaml  capsule_v2.yaml  fraud_model.pt  fraud_model_module.pt  fraud_model_module_optimised.onnx  fraud_model_v2.pt  fraud_model_v2_module.pt  fraud_model_v2_module_optimised.onnx  train_model.py
examples/iris_classifier/: capsule.yaml  iris_model_module.pt  iris_model_module_optimised.onnx  train_model.py
examples/sentiment_classifier/: capsule.yaml  train_model.py
tests/: conftest.py  test_canary.py  test_deployer.py  test_detector.py  test_integration.py  test_manifest.py  test_onnx_optimizer.py  test_packager.py  test_registry.py
